Removed timepoints from the cue and added bar and duration fields

--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -22,12 +22,12 @@
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="script.name"><span>Script</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="bar"><span>Bar</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="action"><span>Action</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="player.name"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="camera.name"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="project.name"><span>Project</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="timePoint.id"><span>Start time</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="timePoint.duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
                 </tr>
             </thead>
             <tbody>
@@ -36,6 +36,8 @@
                     <td>
                         <a ui-sref="script-detail({id:cue.script.id})">{{cue.script.name}}</a>
                     </td>
+                    <td>{{cue.bar}}</td>
+                    <td>{{cue.duration}}</td>
                     <td>{{cue.action}}</td>
                     <td>
                         <a ui-sref="player-detail({id:cue.player.id})">{{cue.player.name}}</a>
@@ -43,8 +45,6 @@
                     <td>
                         <a ui-sref="camera-detail({id:cue.camera.id})">{{cue.camera.name}}</a>
                     </td>
-                    <td>{{cue.timePoint.startTime}}</td>
-                    <td>{{cue.timePoint.duration}}</td>
                     <td>
                         <a ui-sref="project-detail({id:cue.project.id})">{{cue.project.name}}</a>
                     </td>
