--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -8,14 +8,19 @@
             <a ui-sref="script-detail({id:vm.cue.script.id})">{{vm.cue.script.name}}</a>
         </dd>
         <hr>
+        <dt><span>Bar</span></dt>
+        <dd>
+            <a ui-sref="time-point-detail({id:vm.cue.bar})">{{vm.cue.bar}}</a>
+        </dd>
+        <hr>
+        <dt><span>Duration</span></dt>
+        <dd>
+            <a ui-sref="time-point-detail({id:vm.cue.duration})">{{vm.cue.duration}}</a>
+        </dd>
+        <hr>
         <dt><span>Action</span></dt>
         <dd>
             <span>{{vm.cue.action}}</span>
-        </dd>
-        <hr>
-        <dt><span>Time Point</span></dt>
-        <dd>
-            <a ui-sref="time-point-detail({id:vm.cue.timePoint.id})">{{vm.cue.timePoint.startTime}}</a>
         </dd>
         <hr>
         <dt><span>Player</span></dt>
