--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -14,33 +14,38 @@
                     ng-model="vm.cue.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_action">Action</label>
+            <label for="field_script">Script</label>
+            <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="field_bar">Bar</label>
+            <input type="text" class="form-control" name="bar" id="field_bar"
+                   ng-model="vm.cue.bar"
+            />
+        </div>
+        <div class="form-group">
+            <label for="field_duration">Duration</label>
+            <input type="text" class="form-control" name="duration" id="field_duration"
+                   ng-model="vm.cue.duration"
+            />
+        </div>
+        <div class="form-group">
+            <label for="field_action">Action</label>
+            <input type="text" class="form-control" name="action" id="field_action"
+                   ng-model="vm.cue.action"
+            />
+        </div>
+        <div class="form-group">
+            <label for="field_action">Action</label>
             <input type="text" class="form-control" name="action" id="field_action"
                     ng-model="vm.cue.action"
                      />
         </div>
-
-        <div class="form-group">
-            <label for="field_script">Script</label>
-            <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="field_timePoint">Time Point</label>
-            <select class="form-control" id="field_timePoint" name="timePoint" ng-model="vm.cue.timePoint" ng-options="timePoint as timePoint.startTime for timePoint in vm.timepoints | orderBy:'id' track by timePoint.id">
-                <option value=""></option>
-            </select>
-        </div>
         <div class="form-group">
             <label for="field_player">Player</label>
             <select class="form-control" id="field_player" name="player" ng-model="vm.cue.player" ng-options="player as player.name for player in vm.players track by player.id">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="field_script">Script</label>
-            <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
                 <option value=""></option>
             </select>
         </div>
