--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -1,5 +1,10 @@
 <div ng-cloak>
     <div class="row">
+        <button value="Save" class="btn btn-default" ng-disabled="saved" ng-click="vm.save()">
+            <span class="glyphicon glyphicon-save"></span>&nbsp;Save
+        </button>
+    </div>
+    <div class="row">
         <div class="col-md-8">
             <div id="map">
                 <canvas id="concertMap" width="755" height="500"></canvas>
@@ -14,12 +19,11 @@
                 </select>
             </div>
         </div>
-        <button value="Save" class="btn btn-default" ng-disabled="saved" ng-click="vm.save()">Save</button>
-        <div class="row">
-            <div class="col-md-12">
-                <br />
-                <div id="visualization"></div>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <br />
+            <div id="visualization"></div>
         </div>
     </div>
 </div>
