--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -2,17 +2,10 @@
     <div class="row">
         <div class="col-md-8">
             <h2 class="text-center">Graphical Overview</h2>
-            <canvas fabric-map-view="fabricCanvas"></canvas>
+            <canvas fabric-map map="vm.eenwillekeurigemap"></canvas>
         </div>
         <div class="col-md-4">
-            <h3 class="text-center">Add new Object</h3>
-            <fieldset class="form-group">
-                <select class="form-control" id="selectObjectType">
-                    <option value="Camera">Camera</option>
-                    <option value="Player">Player</option>
-                </select>
-                <input type="text" class="form-control" id="nameNewObject" placeholder="Name">
-            </fieldset>
+            <map-table-view map="vm.eenwillekeurigemap"></map-table-view>
         </div>
     </div>
 </div>
