--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-md-8">
             <h2 class="text-center">Graphical Overview</h2>
-            <canvas fabric-map map="vm.eenwillekeurigemap"></canvas>
+            <canvas fabric-map ></canvas>
         </div>
         <div class="col-md-4">
-            <map-table-view map="vm.eenwillekeurigemap"></map-table-view>
+            <map-table-view ></map-table-view>
         </div>
     </div>
 </div>
