--- a/src/main/webapp/app/entities/camera/camera-dialog.html
+++ b/src/main/webapp/app/entities/camera/camera-dialog.html
@@ -38,6 +38,13 @@
                 <option value=""></option>
             </select>
         </div>
+
+        <div class="form-group">
+            <label for="field_map">Map</label>
+            <select class="form-control" id="field_map" name="map" ng-model="vm.map" ng-options="map as map.name for map in vm.maps track by map.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
