--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -1,5 +1,6 @@
 <!--<button type="button" class="btn btn-raised" ng-click="vm.isCamerasCollapsed = !vm.isCamerasCollapsed">Toggle cameras collapse</button>-->
 <!--<button type="button" class="btn btn-raised" ng-click="vm.isPlayersCollapsed = !vm.isPlayersCollapsed">Toggle players collapse</button>-->
+<button type="button" class="btn btn-raised" ng-click="vm.update()">Update</button>
 
 
 <!--<div class="row">-->
@@ -8,37 +9,49 @@
 <!--</div>-->
 <!--<div class="col-md-4">-->
 <table class="table table-hover">
+    <thead>
+    <tr>
+        <th colspan="3"><b>Cameras</b></th>
+    </tr>
+    </thead>
     <tbody>
-    <tr class="info"><td colspan="3"><b>Cameras</b></td></tr>
     <tr ng-repeat-start="camera in vm.map.cameras"
         ng-click="vm.setSelected(camera)"
         ng-class="{ 'success': vm.selected == camera }">
         <td colspan="3">{{camera.name}}</td>
     </tr>
-
-    <tr ng-repeat-end uib-collapse="vm.selected != camera">
-        <td>id: {{camera.id}}</td>
-        <td>x: {{camera.x}}</td>
-        <td>y: {{camera.y}}</td>
+    <tr class="info" ng-repeat-end>
+    <!--<tr ng-repeat-end uib-collapse="false">-->
+        <td colspan="3" style="padding-top: 0; padding-bottom: 0">
+            <div uib-collapse="vm.selected != camera">
+                <p>id: {{camera.id}}</p>
+                <p>x: {{camera.x}}</p>
+                <p>y: {{camera.y}}</p>
+            </div>
+        </td>
     </tr>
 
     <tr class="btn btn-raised btn-xs" ng-click="vm.addCamera()">
         <td></td>
         <td>Add camera</td>
         <td></td>
-        <!--<button class="btn btn-raised" ng-click="vm.addPlayer()">Add player</button>-->
     </tr>
+</table>
 
-
-    <tr class="info"><td colspan="3"><b>Players</b></td></tr>
+<table class="table table-hover">
+    <thead>
+    <tr>
+        <th colspan="3"><b>Players</b></th>
+    </tr>
+    </thead>
     <tr ng-repeat-start="player in vm.map.players"
         ng-click="vm.setSelected(player)"
         ng-class="{ 'success': vm.selected == player }">
         <!--<td>{{player.id}}</td>-->
         <td colspan="3">{{player.name}}</td>
     </tr>
-
-    <tr ng-repeat-end uib-collapse="vm.selected != player">
+    <tr class="info" ng-repeat-end uib-collapse="vm.selected != player">
+    <!--<tr ng-repeat-end uib-collapse="false">-->
         <td>id: {{player.id}}</td>
         <td>x: {{player.x}}</td>
         <td>y: {{player.y}}</td>
@@ -48,7 +61,6 @@
         <td></td>
         <td>Add player</td>
         <td></td>
-        <!--<button class="btn btn-raised" ng-click="vm.addPlayer()">Add player</button>-->
     </tr>
     </tbody>
 </table>
