Removed relationship to Project from Camera and Player.
Camera and Player now have a bi-directional one-to-many relationship to Map, with Map as the owner.

--- a/src/main/webapp/app/entities/camera/camera-detail.html
+++ b/src/main/webapp/app/entities/camera/camera-detail.html
@@ -18,9 +18,9 @@
             <span>{{vm.camera.y}}</span>
         </dd>
         <hr>
-        <dt><span>Project</span></dt>
+        <dt><span>Map</span></dt>
         <dd>
-            <a ui-sref="project-detail({id:vm.camera.project.id})">{{vm.camera.project.name}}</a>
+            <a ui-sref="map-detail({id:vm.camera.map.id})">{{vm.camera.map.name}}</a>
         </dd>
         <hr>
     </dl>
