--- a/src/main/webapp/app/entities/player/player-detail.html
+++ b/src/main/webapp/app/entities/player/player-detail.html
@@ -18,9 +18,9 @@
             <span>{{vm.player.y}}</span>
         </dd>
         <hr>
-        <dt><span>Project</span></dt>
+        <dt><span>Map</span></dt>
         <dd>
-            <a ui-sref="project-detail({id:vm.player.project.id})">{{vm.player.project.name}}</a>
+            <a ui-sref="map-detail({id:vm.player.map.id})">{{vm.player.map.name}}</a>
         </dd>
         <hr>
     </dl>
