--- a/src/main/webapp/app/setup/noproject.html
+++ b/src/main/webapp/app/setup/noproject.html
@@ -1,8 +1,12 @@
 <div ng-cloak>
-    <div class="row">
+    <div class="row" >
+        <div ng-switch="vm.projectIsNull" class="col-md-12">
             <CENTER>
-                <h1>Oops, no project selected</h1>
+                <h1>Oops, unable to get project</h1>
                 <hr/>
+                <p class="lead" ng-switch-when="true">You haven't selected a project yet...</p>
+                <p class="lead" ng-switch-when="false">We were unable to open the project you selected...</p>
+                <br/><br/><br/>
                 <div class="row">
                     <div class="col-md-12"><span class="glyphicon glyphicon-log-in" style="font-size: 60pt;"></span>
                         <hr/>
@@ -20,3 +24,4 @@
             </CENTER>
         </div>
     </div>
+</div>
