--- a/src/main/webapp/app/entities/camera/camera-detail.html
+++ b/src/main/webapp/app/entities/camera/camera-detail.html
@@ -18,6 +18,16 @@
             <span>{{vm.camera.y}}</span>
         </dd>
         <hr>
+        <dt><span>Camera Type</span></dt>
+        <dd>
+            <span>{{vm.camera.cameraType}}</span>
+        </dd>
+        <hr>
+        <dt><span>Lens Type</span></dt>
+        <dd>
+            <span>{{vm.camera.lensType}}</span>
+        </dd>
+        <hr>
         <dt><span>Project</span></dt>
         <dd>
             <a ui-sref="project-detail({id:vm.camera.project.id})">{{vm.camera.project.name}}</a>
