Changed name to Map editor, remove unused controllers

--- a/src/main/webapp/app/map/map-editor.html
+++ b/src/main/webapp/app/map/map-editor.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-md-8">
-            <h2 class="text-center">Graphical Overview</h2>
+            <h2 class="text-center">Map editor</h2>
             <canvas fabric-map ></canvas>
         </div>
         <div class="col-md-4">
