--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row">
-        <button value="Save" class="btn btn-default" ng-disabled="saved" ng-click="vm.save()">
+        <button value="Save" class="btn btn-raised" ng-disabled="vm.saved" ng-click="vm.save()">
             <span class="glyphicon glyphicon-save"></span>&nbsp;Save
         </button>
     </div>
