--- a/src/main/webapp/app/timeline/timeline.html
+++ b/src/main/webapp/app/timeline/timeline.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
-    <div ng-switch="vm.scriptAvailable">
-        <div class="row" ng-switch-when="true">
+    <div>
+        <div class="row">
             <div class="col-md-12">
                 <h2 class="text-center">Timeline</h2><br/><br/>
                 <div id="visualization"></div>
@@ -31,40 +31,6 @@
                     <input type="number" class="form-control" id="durationCue" placeholder="1">
                 </fieldset>
             </div>
-        </div>
-        <div class="row" ng-switch-when="false">
-            <CENTER>
-                <h1>Setup script</h1>
-                <hr/>
-                <p class="lead">This project does not have a script yet, please select an option:</p>
-                <br/><br/><br/>
-                <div class="row">
-                    <div class="col-md-6"><span class="glyphicon glyphicon-list" style="font-size: 60pt;"></span>
-                        <hr/>
-                        <p class="lead">
-                            <button class="btn btn-primary"
-                                    has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
-                                    ui-sref="script.create">
-                    <span>
-                        Create a new script
-                    </span>
-                            </button>
-                        </p>
-                    </div>
-                    <div class="col-md-6"><span class="glyphicon glyphicon-folder-open" style="font-size: 60pt;"></span>
-                        <hr/>
-                        <p class="lead">
-                            <button class="btn btn-primary"
-                                    has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
-                                    ui-sref="script.load">
-                    <span>
-                        Load an existing script
-                    </span>
-                            </button>
-                        </p>
-                    </div>
-                </div>
-            </CENTER>
         </div>
     </div>
 </div>
