--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/vis/dist/vis.css" />
+    <link rel="stylesheet" href="bower_components/angular-timeline/dist/angular-timeline.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
@@ -71,6 +72,8 @@
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/vis/dist/vis.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-timeline/dist/angular-timeline.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -183,13 +186,13 @@
     <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
     <script src="app/admin/user-management/user-management-detail.controller.js"></script>
     <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
-    <script src="app/admin/tracker/tracker.state.js"></script>
-    <script src="app/admin/tracker/tracker.service.js"></script>
-    <script src="app/admin/tracker/tracker.controller.js"></script>
     <script src="app/admin/metrics/metrics.state.js"></script>
     <script src="app/admin/metrics/metrics.service.js"></script>
     <script src="app/admin/metrics/metrics.modal.controller.js"></script>
     <script src="app/admin/metrics/metrics.controller.js"></script>
+    <script src="app/admin/tracker/tracker.state.js"></script>
+    <script src="app/admin/tracker/tracker.service.js"></script>
+    <script src="app/admin/tracker/tracker.controller.js"></script>
     <script src="app/admin/logs/logs.state.js"></script>
     <script src="app/admin/logs/logs.service.js"></script>
     <script src="app/admin/logs/logs.controller.js"></script>
@@ -197,13 +200,13 @@
     <script src="app/admin/health/health.service.js"></script>
     <script src="app/admin/health/health.modal.controller.js"></script>
     <script src="app/admin/health/health.controller.js"></script>
-    <script src="app/admin/docs/docs.state.js"></script>
-    <script src="app/admin/configuration/configuration.state.js"></script>
-    <script src="app/admin/configuration/configuration.service.js"></script>
-    <script src="app/admin/configuration/configuration.controller.js"></script>
     <script src="app/admin/audits/audits.state.js"></script>
     <script src="app/admin/audits/audits.service.js"></script>
     <script src="app/admin/audits/audits.controller.js"></script>
+    <script src="app/admin/configuration/configuration.state.js"></script>
+    <script src="app/admin/configuration/configuration.service.js"></script>
+    <script src="app/admin/configuration/configuration.controller.js"></script>
+    <script src="app/admin/docs/docs.state.js"></script>
     <script src="app/account/settings/settings.state.js"></script>
     <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/account/register/register.state.js"></script>
@@ -215,13 +218,17 @@
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/scripting/scriptingview.state.js"></script>
     <script src="app/scripting/scriptingview.controller.js"></script>
-    <script src="app/map/mapview.state.js"></script>
-    <script src="app/map/mapview.controller.js"></script>
-    <script src="app/entities/entity.state.js"></script>
+    <script src="app/map/map-table.directive.js"></script>
+    <script src="app/map/map-editor.state.js"></script>
+    <script src="app/map/map-editor.controller.js"></script>
+    <script src="app/map/fabric-map.directive.js"></script>
+    <script src="app/live/live.state.js"></script>
+    <script src="app/live/live.controller.js"></script>
     <script src="app/home/loadproject-dialog.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/home/createproject-dialog.controller.js"></script>
+    <script src="app/entities/entity.state.js"></script>
     <script src="app/admin/admin.state.js"></script>
     <script src="app/account/account.state.js"></script>
     <script src="app/app.state.js"></script>
