Only showing current project of map

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -39,7 +39,7 @@
                             <p class="lead">
                                 <button class="btn btn-primary"
                                         has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
-                                        ui-sref="mapview">
+                                        ui-sref="map-editor">
                     <span>
                         Move on from were you left: </br>{{vm.currentProject.name}}
                     </span>
