Trying to fix merge conflicts

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,9 +17,9 @@
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
     <link rel="stylesheet" href="content/css/custom.css">
-    <link rel="stylesheet" href="content/css/vertical-timeline.css">
     <link rel="stylesheet" href="content/css/bootstrap-material-design.css" />
     <link rel="stylesheet" href="content/css/ripples.css" />
+    <link rel="stylesheet" href="content/css/vertical-timeline.css" />
     <!-- endbuild -->
 </head>
 <body ng-app="thefirstorderApp">
