Timeline and map now in separate directives

--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -1,7 +1,7 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-md-8">
-            <canvas fabric-map></canvas>
+            <canvas fabric-map-static></canvas>
         </div>
         <div class="col-md-4">
             <h3 class="text-center">Add new Cue</h3>
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-md-12">
             <br />
-            <div id="visualization"></div>
+            <div timeline></div>
         </div>
     </div>
 </div>
