--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -202,10 +202,12 @@
     <script src="app/account/password/password-strength-bar.directive.js"></script>
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
+    <script src="app/scripting/timeline.directive.js"></script>
     <script src="app/scripting/scripting.state.js"></script>
     <script src="app/scripting/scripting.controller.js"></script>
     <script src="app/scripting/scripting-update-dialog.controller.js"></script>
     <script src="app/scripting/scripting-new-dialog.controller.js"></script>
+    <script src="app/scripting/fabric-map-static.directive.js"></script>
     <script src="app/map/map-table.directive.js"></script>
     <script src="app/map/map-editor.state.js"></script>
     <script src="app/map/map-editor.controller.js"></script>
