Add boolean to FabricMap to disable editing.

--- a/src/main/webapp/app/map/map-editor.html
+++ b/src/main/webapp/app/map/map-editor.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-8">
             <h2 class="text-center">Map editor</h2>
-            <canvas fabric-map map="vm.map" selected="vm.selected"></canvas>
+            <canvas fabric-map map="vm.map" selected="vm.selected" editable="true"></canvas>
         </div>
         <div class="col-md-4">
             <map-table-view map="vm.map" selected="vm.selected"></map-table-view>
