--- a/src/main/webapp/app/scripting/scriptingview.html
+++ b/src/main/webapp/app/scripting/scriptingview.html
@@ -1,11 +1,9 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-md-7">
-            <div id="map">
-                <CENTER>
-                    <br />
-                    <canvas id="concertMap" width="600" height="500"></canvas>
-                </CENTER>
+            <div id="map centered">
+                <br/>
+                <canvas id="concertMap" width="600" height="500"></canvas>
             </div>
         </div>
         <div class="col-md-5">
@@ -15,29 +13,31 @@
                 <select class="form-control" id="selectPlayer">
                     <option ng-repeat="player in vm.players" value="{{player.id}}">{{player.name}}</option>
                 </select>
-                <br />
+                <br/>
                 <label for="selectCamera">Which camera should we use for the cue?</label>
                 <select class="form-control" id="selectCamera">
                     <option ng-repeat="camera in vm.cameras" value="{{camera.id}}">{{camera.name}}</option>
                 </select>
-                <br />
+                <br/>
                 <label for="selectCameraAction">Which camera action should we use for the cue?</label>
                 <select class="form-control" id="selectCameraAction">
-                    <option ng-repeat="cameraAction in vm.cameraActions" value="{{cameraAction.id}}">{{cameraAction.name}}</option>
+                    <option ng-repeat="cameraAction in vm.cameraActions" value="{{cameraAction.id}}">
+                        {{cameraAction.name}}
+                    </option>
                 </select>
-                <br />
+                <br/>
                 <label for="selectScript">Which script should we use for the cue?</label>
                 <select class="form-control" id="selectScript">
                     <option ng-repeat="script in vm.scripts" value="{{script.id}}">{{script.name}}</option>
                 </select>
-                <br />
+                <br/>
                 <label for="durationCue">How long should this cue be?</label>
                 <input type="number" class="form-control" id="durationCue" placeholder="1">
             </fieldset>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <br />
+                <br/>
                 <div id="visualization"></div>
             </div>
         </div>
