Move selected players/camera text to next to the Map

--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -1,7 +1,12 @@
 <div ng-cloak>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8">
             <canvas fabric-map map="vm.map" selected="vm.selected" editable="false"></canvas>
+        </div>
+        <div class="col-md-4">
+            Player: {{vm.selectedPlayer.name}}
+            <br/>
+            Camera: {{vm.selectedCamera.name}}
         </div>
     </div>
     <div class="row">
