Moved upload script from html to controller

--- a/src/main/webapp/app/home/loadproject-dialog.html
+++ b/src/main/webapp/app/home/loadproject-dialog.html
@@ -37,7 +37,7 @@
                     </tbody>
                 </table>
                 <div ng-switch-when="false">
-                    No projects available.</br>
+                    No projects available.<br/>
                     <button class="btn btn-primary"
                             has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
                             ng-click="vm.create()">
