--- a/src/main/webapp/app/map/map-table-view-template.html
+++ b/src/main/webapp/app/map/map-table-view-template.html
@@ -1,4 +1,10 @@
-<button type="button" class="btn btn-raised" ng-click="vm.update()">Update</button>
+<button type="button" class="btn btn-raised" ng-click="vm.update()"><span class="glyphicon glyphicon-refresh"
+                                                                          aria-hidden="true"></span> Update
+</button>
+<button type="button" class="btn btn-raised" ui-sref="map.load-background"><span class="glyphicon glyphicon-blackboard"
+                                                                                 aria-hidden="true"></span> Change
+    background
+</button>
 <table class="table table-hover">
     <thead>
     <tr>
@@ -23,7 +29,7 @@
         </td>
     </tr>
     <tr class="info" ng-repeat-end>
-    <!--<tr ng-repeat-end uib-collapse="false">-->
+        <!--<tr ng-repeat-end uib-collapse="false">-->
         <td colspan="3" style="padding-top: 0; padding-bottom: 0">
             <div uib-collapse="vm.selected != camera">
                 <p>id: {{camera.id}}</p>
@@ -38,6 +44,7 @@
         <td>Add camera</td>
         <td></td>
     </tr>
+    </tbody>
 </table>
 
 <table class="table table-hover">
@@ -46,6 +53,7 @@
         <th colspan="3"><b>Players</b></th>
     </tr>
     </thead>
+    <tbody>
     <tr ng-repeat-start="player in vm.map.players"
         ng-click="vm.setSelected(player)"
         ng-class="{ 'success': vm.selected == player }">
@@ -80,20 +88,4 @@
         <td></td>
     </tr>
     </tbody>
-
-    <input type='file' id='getval' name="background-image"/><br/><br/>
-    <script>
-        document.getElementById('getval').addEventListener('change', readURL, true);
-        function readURL() {
-            var file = document.getElementById("getval").files[0];
-            var reader = new FileReader();
-            reader.onloadend = function () {
-                document.getElementById('concertMap').style.backgroundImage = "url(" + reader.result + ")";
-            }
-            if (file) {
-                reader.readAsDataURL(file);
-            } else {
-
-            }
-        }</script>
 </table>
