Added background image field to map entity. Map editor now gets background from that field.

--- a/src/main/webapp/app/entities/map/map-dialog.html
+++ b/src/main/webapp/app/entities/map/map-dialog.html
@@ -19,6 +19,12 @@
                     ng-model="vm.map.name"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_name">Background image</label>
+            <input type="text" class="form-control" name="name" id="field_backgroundImage"
+                   ng-model="vm.map.backgroundImage"
+            />
+        </div>
 
     </div>
     <div class="modal-footer">
