--- a/src/main/webapp/app/entities/map/maps.html
+++ b/src/main/webapp/app/entities/map/maps.html
@@ -22,6 +22,7 @@
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="backgroundImage"><span>Background image</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,6 +30,7 @@
                 <tr ng-repeat="map in vm.maps track by map.id">
                     <td><a ui-sref="map-detail({id:map.id})">{{map.id}}</a></td>
                     <td>{{map.name}}</td>
+                    <td>{{map.background_image}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
