Fixed minor entity problems, uploading works from swagger but not from map edit page

--- a/src/main/webapp/app/entities/map/map-detail.html
+++ b/src/main/webapp/app/entities/map/map-detail.html
@@ -7,6 +7,12 @@
         <dd>
             <span>{{vm.map.name}}</span>
         </dd>
+
+        <hr>
+        <dt><span>Background image</span></dt>
+        <dd>
+            <span>{{vm.map.backgroundImage}}</span>
+        </dd>
         <hr>
     </dl>
 
