--- a/src/main/webapp/app/entities/map/maps.html
+++ b/src/main/webapp/app/entities/map/maps.html
@@ -30,7 +30,7 @@
                 <tr ng-repeat="map in vm.maps track by map.id">
                     <td><a ui-sref="map-detail({id:map.id})">{{map.id}}</a></td>
                     <td>{{map.name}}</td>
-                    <td>{{map.background_image}}</td>
+                    <td>{{map.backgroundImage}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
