File upload seperated from map

--- a/src/main/webapp/app/entities/map/map-detail.html
+++ b/src/main/webapp/app/entities/map/map-detail.html
@@ -7,11 +7,10 @@
         <dd>
             <span>{{vm.map.name}}</span>
         </dd>
-
         <hr>
-        <dt><span>Background image</span></dt>
+        <dt><span translate="thefirstorderApp.map.background_image">Background Image</span></dt>
         <dd>
-            <span>{{vm.map.backgroundImage}}</span>
+            <span>{{vm.map.background_image}}</span>
         </dd>
         <hr>
     </dl>
