--- a/src/main/webapp/app/entities/map/map-dialog.html
+++ b/src/main/webapp/app/entities/map/map-dialog.html
@@ -20,10 +20,10 @@
                      />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_name">Background image</label>
-            <input type="text" class="form-control" name="name" id="field_backgroundImage"
-                   ng-model="vm.map.backgroundImage"
-            />
+            <label class="control-label" translate="thefirstorderApp.map.background_image" for="field_background_image">Background Image</label>
+            <input type="text" class="form-control" name="background_image" id="field_background_image"
+                    ng-model="vm.map.background_image"
+                     />
         </div>
 
     </div>
