--- a/src/main/webapp/app/entities/map/maps.html
+++ b/src/main/webapp/app/entities/map/maps.html
@@ -4,9 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary"
-                        has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR,ROLE_CAMERA_OPERATOR"
-                        ui-sref="map.new" >
+                <button class="btn btn-primary" ui-sref="map.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
                         Create new Map
@@ -22,7 +20,7 @@
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="backgroundImage"><span>Background image</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="background_image"><span translate="thefirstorderApp.map.background_image">Background Image</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -30,7 +28,7 @@
                 <tr ng-repeat="map in vm.maps track by map.id">
                     <td><a ui-sref="map-detail({id:map.id})">{{map.id}}</a></td>
                     <td>{{map.name}}</td>
-                    <td>{{map.backgroundImage}}</td>
+                    <td>{{map.background_image}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
@@ -40,14 +38,12 @@
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
-                                    has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR,ROLE_CAMERA_OPERATOR"
                                     ui-sref="map.edit({id:map.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
-                                    has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR,ROLE_CAMERA_OPERATOR"
                                     ui-sref="map.delete({id:map.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
