--- a/src/main/webapp/app/map/player-map-dialog.html
+++ b/src/main/webapp/app/map/player-map-dialog.html
@@ -7,19 +7,79 @@
         <h4 class="modal-title" id="myPlayerLabel">Create or edit a Player</h4>
     </div>
     <div class="modal-body">
-        <div class="form-group">
+        <div class="form-group label-floating">
             <label class="control-label" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name" ng-model="vm.player.name" />
+            <input type="text"
+                   class="form-control"
+                   name="name"
+                   id="field_name"
+                   ng-model="vm.player.name"
+                   required
+            />
+            <div ng-show="editForm.name.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.name.$error.required">
+                    This field is required.
+                </p>
+            </div>
         </div>
-        <div class="form-group">
+        <div class="form-group label-floating">
             <label class="control-label" for="field_x">X</label>
-            <input type="number" class="form-control" name="x" id="field_x" ng-model="vm.player.x"/>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_y">Y</label>
-            <input type="number" class="form-control" name="y" id="field_y" ng-model="vm.player.y" />
+            <input type="number"
+                   class="form-control"
+                   name="x"
+                   id="field_x"
+                   ng-model="vm.player.x"
+                   required min="0" max="100"
+            />
+            <div ng-show="editForm.x.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.x.$error.required">
+                    This field is required.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.x.$error.min" translate-value-min="0">
+                    This field should be more than 0.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.x.$error.max">
+                    This field cannot be more than 100.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.x.$error.number">
+                    This field should be a number.
+                </p>
+            </div>
         </div>
 
+        <div class="form-group label-floating">
+            <label class="control-label" for="field_y">Y</label>
+            <input type="number"
+                   class="form-control"
+                   name="y"
+                   id="field_y"
+                   ng-model="vm.player.y"
+                   required min="0" max="100"
+            />
+            <div ng-show="editForm.y.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.y.$error.required">
+                    This field is required.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.y.$error.min" translate-value-min="0">
+                    This field should be more than 0.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.y.$error.max">
+                    This field cannot be more than 100.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.y.$error.number">
+                    This field should be a number.
+                </p>
+            </div>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
