Save the camera angle and display the angle in the views

--- a/src/main/webapp/app/entities/camera/camera-detail.html
+++ b/src/main/webapp/app/entities/camera/camera-detail.html
@@ -18,6 +18,11 @@
             <span>{{vm.camera.y}}</span>
         </dd>
         <hr>
+        <dt><span>Angle</span></dt>
+        <dd>
+            <span>{{vm.camera.angle}}</span>
+        </dd>
+        <hr>
         <dt><span>Camera Type</span></dt>
         <dd>
             <span>{{vm.camera.cameraType}}</span>
