--- a/src/main/webapp/app/entities/camera/camera-dialog.html
+++ b/src/main/webapp/app/entities/camera/camera-dialog.html
@@ -60,6 +60,26 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label" for="field_angle">Angle</label>
+            <input type="number" class="form-control" name="angle" id="field_angle"
+                   ng-model="vm.camera.angle"
+                   min="0" max="360" />
+            <div ng-show="editForm.angle.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.angle.$error.min" translate-value-min="0">
+                    This field should be more than 0.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.angle.$error.max">
+                    This field cannot be more than 100.
+                </p>
+                <p class="help-block"
+                   ng-show="editForm.angle.$error.number">
+                    This field should be a number.
+                </p>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="control-label" for="field_cameraType">Camera Type</label>
             <input type="text" class="form-control" name="cameraType" id="field_cameraType"
                     ng-model="vm.camera.cameraType"
