--- a/src/main/webapp/app/entities/camera/cameras.html
+++ b/src/main/webapp/app/entities/camera/cameras.html
@@ -24,6 +24,7 @@
                     <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="x"><span>X</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="y"><span>Y</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="angle"><span>Angle</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="cameraType"><span>Camera Type</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="lensType"><span>Lens Type</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="map.name"><span>Map</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -34,8 +35,9 @@
                 <tr ng-repeat="camera in vm.cameras track by camera.id">
                     <td><a ui-sref="camera-detail({id:camera.id})">{{camera.id}}</a></td>
                     <td>{{camera.name}}</td>
-                    <td>{{camera.x}}</td>
-                    <td>{{camera.y}}</td>
+                    <td>{{camera.x | number: 2}}</td>
+                    <td>{{camera.y | number: 2}}</td>
+                    <td>{{camera.angle | number: 2}}</td>
                     <td>{{camera.cameraType}}</td>
                     <td>{{camera.lensType}}</td>
                     <td>
